@@ -311,6 +311,8 @@ inline bool NavigationScheduler::shouldScheduleNavigation(const URL& url) const
         return false;
     if (protocolIsJavaScript(url))
         return true;
+    if (!url.isValid() && !m_frame.settings().allowNavigationToInvalidURL())
+        return false;
     return NavigationDisablerForBeforeUnload::isNavigationAllowed();
 }
 
